
	* ercomp is a stand alone function which returns the estimation of
	the components of the variance of the errors,
	
	* the estimation of two-ways within model is now implemented for
	unbalanced panels,

	* the fixef method is much improved, the fixed effects may be
	computed in levels, in deviation from the first level or in
	deviation from the overall mean

	* in pbsytest, the arguments test are now in lowercases,

	* the pvcovHC function is replaced by suitable vcovHC methods for
	panelmodel and pgmm models
	
Changes since version 1-1.0

	* in fixef, the effect argument default is now NULL:
	fixef(model_with_time_effect) now works correctly

	* in pFtest, the error message "the arguments should be a within
	and a pooling model" is removed so that two within models may be
	provided

	* for backward compatibility reasons, the pvcovHC is reintroduced.

	* for backward compatibility reasons, argument test of pbsytest
	may be indicated in upper case

	* we switched back to old names for two arguments of plm ercomp ->
	random.methods ivar -> inst.method -> ivar

	* amemiya method is not implement for unbalanced panels: an error
	message is now returned.
 

Changes since version 1-1.1

	* part of the "details" section of the fixef.plm man page is
	removed

	* a fitted.value method is now available for plm objects. It
	returns the fitted values of the untransformed response
	
	* in pdiff, a drop=FALSE is added. This omission was responsible
	of a bug while estimating a model like plm(inv~value-1, data =
	Grunfeld, model = "fd")

	* the lev2var is changed so that it doesn't result in an error
	when the data.frame contains no factor: this was responsible of a
	bug in plm.ht

	
Changes since version 1-1.2

	* the inst directory was missing, it has been added again
	
Changes since version 1-1.3

	* a relevant error message is added when a within model is
	estimated with no time-varying variable

	* the formula method for dynformula objects is now exported

	