@@ -261,7 +261,6 @@ plm.ht <- function(formula, data){
   if (length(end.cst) > 0) NC <- X[ , end.cst, drop = FALSE] else NC <- NULL
 
   sigma2 <- list()
-  sigma2$one <- 0
   sigma2$idios <- deviance(within)/(N-n)
   if (length(tot.cst) !=0 ){
     zo <- twosls(fixef[as.character(id)],cbind(1,XC,NC),cbind(1,XC,XV))
@@ -269,14 +268,14 @@ plm.ht <- function(formula, data){
   else{
     zo <- lm(fixef~1)
   }
-  ssr <- deviance(zo)/N
+  sigma2$one <- deviance(zo)/n
 
   if(balanced){
-    sigma2$id <- ssr-sigma2$idios/T
+    sigma2$id <- (sigma2$one-sigma2$idios)/T
     theta <- 1-sqrt(sigma2$idios/(sigma2$idios+T*sigma2$id))
   }
   else{
-    sigma2$id <- ssr-sigma2$idios/T
+    sigma2$id <- (sigma2$one-sigma2$idios)*sum(1/Ti)
     theta <- 1-sqrt(sigma2$idios/(sigma2$idios+Ti*sigma2$id))
     theta <- theta[as.character(id)]
   }
