@@ -197,4 +197,13 @@ Changes since version 1-1.3
 
 	* the formula method for dynformula objects is now exported
 
-	
+	* a misleading notation was corrected for plm.ht model
+
+	* the definition of sigma2$id for unbalanced ht model is
+	corrected, an harmonic mean of Ti being used
+
+	* the definition of tss.default is simplified
+
+
+
+
